--- a/.github/workflows/build-disk.yml
+++ b/.github/workflows/build-disk.yml
@@ -91,16 +91,20 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build disk images
-        id: build
-        uses: osbuild/bootc-image-builder-action@main
-        with:
-          builder-image: ${{ env.BIB_IMAGE }}
-          config-file: ${{ matrix.disk-type == 'anaconda-iso' && './disk_config/iso.toml' || './disk_config/disk.toml' }}
-          image: ${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.DEFAULT_TAG }}
-          chown: ${{ env.USER_UID }}:${{ env.USER_GID }}
-          types: ${{ matrix.disk-type }}
-          additional-args: --use-librepo=True --rootfs btrfs
+      - name: Build ISO
+        run: |
+          sudo just build-iso ${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_NAME }} latest
+
+      # - name: Build disk images
+      #   id: build
+      #   uses: osbuild/bootc-image-builder-action@main
+      #   with:
+      #     builder-image: ${{ env.BIB_IMAGE }}
+      #     config-file: ${{ matrix.disk-type == 'anaconda-iso' && './disk_config/iso.toml' || './disk_config/disk.toml' }}
+      #     image: ${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.DEFAULT_TAG }}
+      #     chown: ${{ env.USER_UID }}:${{ env.USER_GID }}
+      #     types: ${{ matrix.disk-type }}
+      #     additional-args: --use-librepo=True --rootfs btrfs
 
       - name: Upload disk images and Checksum to Job Artifacts
         if: inputs.upload-to-s3 != true && github.event_name != 'pull_request'
