Updates plasma 6 panel and applet config
Updates crystal-dock config
Fixes openrazer installation and adds proton-mail as system application

--- a/build_files/config/crystal-dock-2/KDE/appearance.conf
+++ b/build_files/config/crystal-dock-2/KDE/appearance.conf
@@ -3,9 +3,10 @@ activeIndicatorColor=#ff8c00
 backgroundColor=#6b638abd
 borderColor=#b1c4de
 firstRunWindowCountIndicator=false
+floatingMargin=2
 inactiveIndicatorColor=#008b8b
-maximumIconSize=128
-minimumIconSize=48
+maximumIconSize=70
+minimumIconSize=40
 panelStyle=0
 spacingFactor=0.5
 tooltipFontSize=24
