--- a/.github/workflows/build-disk.yml
+++ b/.github/workflows/build-disk.yml
@@ -8,11 +8,14 @@ permissions:
 on:
   workflow_dispatch:
     inputs:
-      upload-to-s3:
-        description: "Upload to S3"
-        required: false
-        default: false
-        type: boolean
+      branch:
+        description: "Select branch to fetch artifacts from"
+        required: true
+        default: "stable"
+        type: choice
+        options:
+          - stable
+          - main
       platform:
         description: "Target Arch"
         required: true
@@ -23,6 +26,7 @@ on:
   pull_request:
     branches:
       - stable
+      - main
     paths:
       - './disk_config/disk.toml'
       - './disk_config/iso.toml'
@@ -31,7 +35,7 @@ on:
 env:
   IMAGE_NAME: ${{ github.event.repository.name }} # output of build.yml, keep in sync
   IMAGE_REGISTRY: "ghcr.io/${{ github.repository_owner }}"  # do not edit
-  DEFAULT_TAG: "stable"
+  DEFAULT_TAG: ${{ github.event.inputs.branch || github.ref_name }}
   BIB_IMAGE: "quay.io/centos-bootc/bootc-image-builder:latest" # "quay.io/centos-bootc/bootc-image-builder:latest" - see https://github.com/osbuild/bootc-image-builder/pull/954
 
 concurrency:
@@ -47,7 +51,7 @@ jobs:
       matrix:
         disk-type: ["anaconda-iso"]
         # disk-type: ["qcow2", "anaconda-iso"]
-        major_version: [41]
+        major_version: [43]
     permissions:
       contents: read
       packages: read
@@ -117,7 +121,7 @@ jobs:
           image_tag: ${{ env.DEFAULT_TAG }}
           secure_boot_key_url: '${{ github.server_url }}/${{ github.repository_owner }}/bazzite/raw/main/secure_boot.der'
           enrollment_password: 'universalblue'
-          iso_name: ${{ env.IMAGE_NAME }}-${{ env.DEFAULT_TAG }-${{ inputs.platform }}.iso
+          iso_name: ${{ env.IMAGE_NAME }}-${{ env.DEFAULT_TAG }}-${{ inputs.platform || 'amd64' }}.iso
           enable_cache_dnf: "false"
           enable_cache_skopeo: "false"
           # flatpak_remote_refs_dir: ${{ steps.generate-flatpak-dir-shortname.outputs.flatpak-dir-shortname }}
@@ -139,29 +143,14 @@ jobs:
       #     additional-args: --use-librepo=True --rootfs btrfs
 
       - name: Upload disk images and Checksum to Job Artifacts
-        if: inputs.upload-to-s3 != true && github.event_name != 'pull_request'
+        if: github.event_name != 'pull_request'
         uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6
         with:
-          name: ${{ env.IMAGE_NAME }}-iso
+          name: build-iso-${{ env.DEFAULT_TAG }}
           path: |
-            ${{ env.IMAGE_NAME }}-${{ env.DEFAULT_TAG }-${{ inputs.platform }}.iso
-            ${{ env.IMAGE_NAME }}-${{ env.DEFAULT_TAG }-${{ inputs.platform }}-CHECKSUM
+            ${{ env.IMAGE_NAME }}-${{ env.DEFAULT_TAG }}-${{ inputs.platform || 'amd64' }}.iso
+            ${{ env.IMAGE_NAME }}-${{ env.DEFAULT_TAG }}-${{ inputs.platform || 'amd64' }}.iso-CHECKSUM
           if-no-files-found: error
           retention-days: 10
           compression-level: 0
-      
-      - name: Upload to S3
-        if: inputs.upload-to-s3 == true && github.event_name != 'pull_request'
-        shell: bash
-        env:
-          RCLONE_CONFIG_S3_TYPE: s3
-          RCLONE_CONFIG_S3_PROVIDER: ${{ secrets.S3_PROVIDER }}
-          RCLONE_CONFIG_S3_ACCESS_KEY_ID: ${{ secrets.S3_ACCESS_KEY_ID }}
-          RCLONE_CONFIG_S3_SECRET_ACCESS_KEY: ${{ secrets.S3_SECRET_ACCESS_KEY }}
-          RCLONE_CONFIG_S3_REGION: ${{ secrets.S3_REGION }}
-          RCLONE_CONFIG_S3_ENDPOINT: ${{ secrets.S3_ENDPOINT }}
-          SOURCE_DIR: ${{ steps.build.outputs.output-directory }}
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y rclone
-          rclone copy $SOURCE_DIR S3:${{ secrets.S3_BUCKET_NAME }}
+
