--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,17 +40,14 @@ jobs:
         uses: actions/checkout@v6
 
       - name: Download Build Artifacts
-        uses: dawidd6/action-download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
-          workflow: "Build disk images"
-          workflow_conclusion: success
-          # Use the Run ID if we have one (from PR/Workflow_run or Manual Input)
-          run_id: ${{ github.event.inputs.run_id || github.event.workflow_run.id || '' }}
-          # ONLY provide the branch name if we DON'T have a Run ID
-          branch: ${{ (github.event.inputs.run_id || github.event.workflow_run.id) == '' && 'stable' || '' }}
-          # This helps the action handle the "Found multiple" or "API delay" issues
-          search_artifacts: true 
-          if_no_artifact_found: error
+          # The name must match exactly what was uploaded in build-disk.yml
+          name: build-iso-stable
+          # Use the Run ID from manual input or the automated trigger
+          run-id: ${{ github.event.inputs.run_id || github.event.workflow_run.id }}
+          # This is required when downloading from a DIFFERENT workflow
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Process ISO
         id: process
