--- a/.github/workflows/build-disk.yml
+++ b/.github/workflows/build-disk.yml
@@ -102,7 +102,7 @@ jobs:
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6
 
       - name: Login to GitHub Container Registry
-        if: github.event_name != 'pull_request' &&  && github.event.workflow_run.event != 'pull_request' && github.ref == format('refs/heads/{0}', github.event.repository.default_branch)
+        if: github.event_name != 'pull_request' && github.event.workflow_run.event != 'pull_request'
         uses: docker/login-action@5e57cd118135c172c3672efd75eb46360885c0ef # v3
         with:
           registry: ghcr.io
