--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -77,6 +77,7 @@ jobs:
           else
             echo "mode=split" >> $GITHUB_OUTPUT
             split -b 1900M "$ISO_FILENAME" "${ISO_FILENAME}.part-"
+            rm -f "$ISO_FILENAME"
           fi
 
       - name: Create GitHub Release
