--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -88,12 +88,20 @@ jobs:
             ## Bazzite Stable Build
             ${{ env.S3_LINK || 'ISO split into parts below. Rejoin with `cat *.part-* > bazzite.iso`' }}
           files: |
-            *.part-*
             *-CHECKSUM
-            ${{ steps.process.outputs.mode == 'split' && '' || '*.iso' }}
+            *${{ github.event.inputs.upload_to_s3 == 'true' && '' || '*.part-*' }}
 
       - name: Cleanup
         if: success()
-        uses: geekyeggo/delete-artifact@v5
-        with:
-          name: build-iso-stable
+        run: |
+          # Find the artifact ID by name and delete it
+          ARTIFACT_ID=$(gh api repos/${{ github.repository }}/actions/artifacts?name=build-iso-stable --jq '.artifacts[0].id')
+
+          if [ ! -z "$ARTIFACT_ID" ] && [ "$ARTIFACT_ID" != "null" ]; then
+            echo "Deleting artifact ID: $ARTIFACT_ID"
+            gh api --method DELETE repos/${{ github.repository }}/actions/artifacts/$ARTIFACT_ID
+          else
+            echo "No artifact found with name 'build-iso-stable'. Skipping cleanup."
+          fi
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
