BazziteOS is now Deimos
Since the start of this project a month ago, I used BazziteOS as the repo name
not really thinking anything of it. Since the path month, this OS has been customized
features. It is time to name it and remove any confusion with Bazzite
official OS.

--- a/.github/workflows/clean-old-images.yml
+++ b/.github/workflows/clean-old-images.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           account: user
-          image-names: 'bazziteos'
+          image-names: 'deimos'
           
           # Delete versions older than 20 days
           cut-off: 20d
